avance en clase

--- a/LEVEL-UP/CSS/productos.css
+++ b/LEVEL-UP/CSS/productos.css
@@ -23,3 +23,14 @@
     padding: 30px;
     align-content: center;
 }
+
+.select_image{
+    width: 100px;
+
+}
+
+.im_selec_prod{
+    padding: 50%;
+}
+
+
